# myproject

./: README.rst  requirements.txt  setup.cfg  setup.py
etc/apache2/: app.wsgi  myproject.conf
etc/myproject/: api-paste.ini  myproject-config-generator.conf
myproject/: messaging.py  opts.py  service.py  sky.py  utils.py
myproject/api/: __init__.py  app.py  hooks.py
myproject/api/controllers/: root.py
myproject/api/controllers/v1/: base.py  root.py  rpc.py  students.py  utils.py
myproject/cmd/: polling.py  sender.py  sky.py  storage.py
myproject/db/: __init__.py  base.py  models.py
myproject/db/mariadb/: impl_mariadb.py
myproject/db/migrate/: alembic.ini
myproject/db/migrate/alembic/: env.py
myproject/db/migrate/alembic/versions/: 677de41920e9_create_student_table.py  77cca51ca78e_add_email_to_student.py
myproject/rpc/: __init__.py  fibonacci.py
