[metadata]
name = myproject
version = 1.0
summary = myproject
description-file =
    README.rst
author = me
author-email = 554761052@qq.com
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    myproject
data_files =
    /etc/myproject = etc/myproject/*
    /var/www/myproject = etc/apache2/app.wsgi
    /etc/httpd/conf.d = etc/apache2/myproject.conf

[entry_points]
wsgi_scripts =
    myproject-api = myproject.api.app:build_wsgi_app

console_scripts =
    myproject-dbsync = myproject.cmd.storage:dbsync

oslo.config.opts =
    myproject = myproject.opts:list_opts

myproject.storage =
    mysql = myproject.db.mariadb.impl_mariadb:Connection
    mysql+pymysql = myproject.db.mariadb.impl_mariadb:Connection
